Issue #406 #405 - Refactor